[project]
name = "agent-zoo"
version = "0.1.0"
description = "Two AI agents collaborate via a shared text channel"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[project.scripts]
agent-zoo = "agent_zoo:main"

